--- a/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_shop.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_shop.xml
@@ -12,8 +12,18 @@
     tools:context="com.korbkenny.doodle_1.ShopActivity">
 
     <TextView
+        android:id="@+id/ShopTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello"/>
+        android:text="Welcome to the shop"
+        android:textSize="30sp"
+        android:fontFamily="casual"
+        android:layout_centerHorizontal="true"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ShopTitle"/>
 
 </RelativeLayout>
