--- a/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_main.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_main.xml
@@ -9,26 +9,39 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#ffffff"
     tools:context="com.korbkenny.doodle_1.MainActivity">
 
     <TextView
         android:id="@+id/Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="NAME ME"
+        android:text="Doodle Boy"
         android:textSize="40sp"
         android:fontFamily="casual"
         android:textStyle="bold"
         android:gravity="center_horizontal"/>
-
-    <ImageView
-        android:id="@+id/doodlePic"
+    <FrameLayout
+        android:id="@+id/doodleFrame"
+        android:layout_below="@id/Title"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/Title"/>
+        android:layout_centerHorizontal="true">
 
+         <ImageView
+             android:id="@+id/doodlePic"
+              android:layout_width="300dp"
+              android:layout_height="300dp"
+              />
+
+        <ImageView
+            android:id="@+id/dpicHair"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            />
+
+</FrameLayout>
     <Button
         android:id="@+id/ButtonShop"
         android:layout_width="100dp"
