--- a/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_main.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
         android:layout_height="60dp"
         android:text="shop"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentRight="true"/>
 
 
 </RelativeLayout>
