--- a/Desktop/Project-2/Doodle-1/app/src/main/res/layout/shop_viewholder.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/res/layout/shop_viewholder.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/clickable_item"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
@@ -31,7 +33,9 @@
 
     <ImageView
         android:id="@+id/vhMoneySign"
-        android:layout_width="30dp"
-        android:layout_height="80dp"/>
+        android:layout_width="35dp"
+        android:layout_height="80dp"
+        app:srcCompat="@drawable/moneymoneymoney"
+        />
 
 </LinearLayout>
