--- a/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_shop.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_shop.xml
@@ -5,14 +5,11 @@
     android:id="@+id/activity_shop"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#ffffff"
     tools:context="com.korbkenny.doodle_1.ShopActivity">
 
     <TextView
+        android:layout_marginTop="16dp"
         android:id="@+id/ShopTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,6 +19,7 @@
         android:layout_centerHorizontal="true"/>
 
     <android.support.v7.widget.RecyclerView
+        android:layout_marginLeft="10dp"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
