--- a/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_shop.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_shop.xml
@@ -1,28 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_shop"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
     tools:context="com.korbkenny.doodle_1.ShopActivity">
 
-    <TextView
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/actioncartbutton"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@android:drawable/ic_menu_save"-->
+        <!--android:layout_gravity="end|bottom"-->
+        <!--android:layout_margin="15dp"-->
+        <!--/>-->
+
+
+
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+    <LinearLayout
         android:layout_marginTop="16dp"
-        android:id="@+id/ShopTitle"
+        android:id="@+id/ShopTop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+
+    <TextView
+        android:id="@+id/shopTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to the shop"
-        android:textSize="30sp"
+        android:text="Shop for Stuff"
+        android:textSize="40sp"
         android:fontFamily="casual"
-        android:layout_centerHorizontal="true"/>
+        android:textStyle="bold"
+        />
+
+        <TextView
+            android:gravity="end|center_vertical"
+            android:layout_marginLeft="40dp"
+            android:id="@+id/shopMoney"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:fontFamily="casual"
+            android:text="11"/>
+
+        <ImageView
+            android:id="@+id/iconMoney"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/moneymoneymoney"/>
+
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:layout_marginLeft="10dp"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ShopTitle"/>
+        android:layout_below="@id/ShopTop"/>
 
 </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/checkoutbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/checkoutbutton"
+        android:layout_gravity="end|bottom"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="48dp"
+        />
+
+</android.support.design.widget.CoordinatorLayout>
