--- a/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_main.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_main.xml
@@ -24,22 +24,43 @@
     <FrameLayout
         android:id="@+id/doodleFrame"
         android:layout_below="@id/Title"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="360dp"
+        android:layout_height="360dp"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true">
 
+        <ImageView
+            android:id="@+id/dpicElemental"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
          <ImageView
              android:id="@+id/doodlePic"
-              android:layout_width="300dp"
-              android:layout_height="300dp"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
               />
 
         <ImageView
             android:id="@+id/dpicHair"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             />
+
+        <ImageView
+            android:id="@+id/dpicWeapon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <ImageView
+            android:id="@+id/dpicHat"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <ImageView
+            android:id="@+id/dpicShoes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
 
 </FrameLayout>
     <Button
@@ -49,6 +70,21 @@
         android:text="shop"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"/>
+    <Button
+        android:id="@+id/ButtonRefresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="refresh everything"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
+    <Button
+        android:id="@+id/ButtonEquip"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:text="Equip"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        />
 
 
 </RelativeLayout>
