--- a/Desktop/Project-2/Doodle-1/app/src/main/res/layout/shop_viewholder.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/res/layout/shop_viewholder.xml
@@ -8,34 +8,40 @@
     <ImageView
         android:id="@+id/vhIcon"
         android:layout_width="100dp"
-        android:layout_height="80dp"/>
+        android:layout_height="80dp"
+        android:layout_marginRight="10dp"/>
 
     <TextView
         android:id="@+id/vhName"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:text="Giant Pair of Gloves"
         android:fontFamily="casual"
+        android:layout_gravity="center_horizontal"
         android:textSize="20sp"
         android:textStyle="bold"
         android:gravity="center"
+        android:layout_marginRight="15dp"
         />
 
+
+
+    <ImageView
+        android:id="@+id/vhMoneySign"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:layout_gravity="end"
+        app:srcCompat="@drawable/moneymoneymoney"
+        />
     <TextView
         android:id="@+id/vhPrice"
-        android:layout_width="40dp"
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:textSize="20sp"
         android:fontFamily="casual"
         android:text="16"
+        android:layout_gravity="end"
         android:layout_marginLeft="10dp"
+        android:layout_marginRight="5dp"
         android:gravity="center"/>
-
-    <ImageView
-        android:id="@+id/vhMoneySign"
-        android:layout_width="35dp"
-        android:layout_height="80dp"
-        app:srcCompat="@drawable/moneymoneymoney"
-        />
-
 </LinearLayout>
