--- a/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_equip.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/res/layout/activity_equip.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_equip"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -25,6 +26,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@id/equipTitle"/>
+        android:layout_below="@id/equipTitle"
+        android:layout_marginBottom="80dp"/>
+
+    <Button
+        android:id="@+id/ButtonSave"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:text="Save"/>
+
 
 </RelativeLayout>
