--- a/Desktop/Project-2/Doodle-1/app/src/main/res/layout/shop_viewholder.xml
+++ b/Desktop/Project-2/Doodle-1/app/src/main/res/layout/shop_viewholder.xml
@@ -3,6 +3,8 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@+id/clickable_item"
               android:orientation="horizontal"
+              android:layout_marginTop="12dp"
+              android:layout_marginBottom="12dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
     <ImageView
